# gift-wrap

./: .bandit  .env.template  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: test_lint_on_push.yml
gift_wrap/: __init__.py  cloud_service.py
gift_wrap/aws/: constants.py  dynamodb.py  exceptions.py  s3.py  session.py  utils.py
gift_wrap/gcp/: __init__.py  cloud_storage.py  gcp.py
gift_wrap/hgsc/: cvl.py  cvl_webservice.py  exceptions.py  exemplar.py  sample_tracker.py  type_defs.py  webservice.py
gift_wrap/rclone/: __init__.py  exceptions.py  rclone.py
gift_wrap/sample_tracker/: __init__.py  exceptions.py  sample_tracker.py
gift_wrap/utils/: http.py  requests.py  strtobool.py  token.py  utils.py
tests/: conftest.py  test_gift_wrap.py
tests/aws/: test_dynamodb.py  test_s3.py  test_utils.py
tests/gcp/: test_gcp.py  test_storage_client.py
tests/hgsc/: test_cvl.py  test_exemplar.py  test_sample_tracker.py
tests/rclone/: __init__.py  test_rclone.py
tests/sample_tracker/: test_sample_tracker.py
