[tool.poetry]
name = "gift-wrap"
version = "0.1.0"
description = ""
authors = ["Marcela Torres <itsmarcy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# Optional dependencies
requests = { version = "^2.25.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[tool.poetry.extras]
sample_tracker = [
    "requests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
