[metadata]
name = gift_wrap
version = 1.0.0+dev
author = Marcela Torres
author_email = marcelat@bcm.edu
description = Minimal hello world package. Runnable with entry point and importable.
long_description = file:README.md
url = https://github.com/BCM-HGSC
license = MIT
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# The package names (import):
python_requires = >=3.8
# You don't need package_dir if your packeges are at the top.
package_dir =
    =gift_wrap
packages = find:

install_requires =
    requests
    tenacity
    yarl

[options.extras_require]
aws =
  boto3
  boto3-stubs[s3]
  boto3-stubs[dynamodb]
dev =
    pre-commit
    pylint
gcp =
    google-cloud-storage
test =
    pytest
    pytest-dotenv
# You don't this if your packeges are at the top.
[options.packages.find]
where = gift_wrap

[bdist_wheel]
universal = 1
