[metadata]
name = gift_wrap
version = attr: gift_wrap.__version__

author = Marcela Torres
author_email = marcelat@bcm.edu
description = Minimal hello world package. Runnable with entry point and importable.
long_description = file:README.md
url = https://github.com/BCM-HGSC
license = MIT
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
# The package names (import):
python_requires = >= 3.9
packages = find:

install_requires =
    requests
    yarl

[options.extras_require]
all =
    boto3
    boto3-stubs[s3]
    boto3-stubs[dynamodb]
    pylint
    google-cloud-storage
    pytest
      pytest-dotenv
aws =
    boto3
    boto3-stubs[s3]
    boto3-stubs[dynamodb]
dev =
    pre-commit
    pylint
gcp =
    google-cloud-storage
test =
    pytest
    pytest-dotenv

[bdist_wheel]
universal = 1
